{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "44b9159a-8313-46a5-9313-16c01037a141",
            "actions": [
                {
                    "name": "BuildAction",
                    "type": "Button",
                    "id": "5e859b1f-86c8-4e1c-83d4-fda8822153ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DestroyAction",
                    "type": "Button",
                    "id": "7630c571-1d83-4c37-b0eb-67c9c4771e9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cursor",
                    "type": "PassThrough",
                    "id": "8847d62f-eb7b-4a1f-8e72-cd9d0cc06e41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b84fbe50-e548-46fa-9bb1-d6b016a5ba93",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa771239-d464-4e1c-908a-c9305d2e9465",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DestroyAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f12d95-359e-4742-b699-c49b19b17ade",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}